day17_network-policy-EKS/ingress-giropops-senhas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-ingress
  namespace: giropops
  annotations: # Configura o rewrite da URL   
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx #inseri a classe do ingress, pois nao funcionou sem. 
  rules:
  - host: giropops.nginx.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: giropops-senhas-svc
            port:
              number: 5000
