day17_network-policy-EKS/01-bloqueia-ingress-todo-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: giropops
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
